Update index.html grid
agregue 4 img para que quede proporcionado

--- a/index.html
+++ b/index.html
@@ -180,6 +180,19 @@
           <div class="grid-item">
             <img src="img/cuadri14.jpeg" alt="Descripción de la imagen 1">
           </div>
+
+           <div class="grid-item">
+            <img src="img/cuadri11.jpg" alt="Descripción de la imagen 1">
+        </div>
+        <div class="grid-item">
+            <img src="img/cuadri12.jpeg" alt="Descripción de la imagen 1">
+          </div>
+          <div class="grid-item">
+            <img src="img/cuadri13.jpeg" alt="Descripción de la imagen 1">
+          </div>
+          <div class="grid-item">
+            <img src="img/cuadri14.jpeg" alt="Descripción de la imagen 1">
+          </div>
     </div>
 
 
